<resources>
    <string name="app_name">Recipeek</string>
    <string name="custom_and_online_recipes">custom and online recipes ..</string>
    <string name="online_image">Online Image</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="recipe_photo">REcipe photo</string>
    <string name="empty">Recipeek seems desserted 👻 ...for now..... \nCreate your first recipee to make this go away .. for ever!! 🍳</string>
    <string name="image_for_empty_recipees">IMage for empty recipees</string>
    <string name="create_recipe">Create Recipe</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="cook_time_min">Cook time (min)</string>
    <string name="prep_time">Prep time</string>
    <string name="serves_plates">Serves (plates)</string>
    <string name="calories">Calories</string>
    <string name="igredients">Igredients</string>
    <string name="add">Add</string>
    <string name="preparation_instructions">Preparation instructions</string>
    <string name="cook_inst">Cooking Instrutions</string>
    <string name="pace_each_instruction_on_a_separate_line">Pace each instruction on a separate line</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="close">close</string>
    <string name="ingredient">Ingredient</string>
    <string name="unit_ml_g_fl">Unit (ml,g,fl)</string>
    <string name="amount">Amount</string>
    <string name="close_image">Close Image</string>
    <string name="like_image">like image</string>
    <string name="recipe_info">Recipe Info</string>
    <string name="preparation">Preparation</string>
    <string name="ingredients">Igredients</string>
    <string name="calo">Calories</string>
    <string name="cook_time">Cook Time</string>
    <string name="min">min</string>
    <string name="prep_tim">Prep Time</string>
    <string name="start_cooking">Start Cooking</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="edit">Edit</string>
    <string name="channel_description">Recipe cooking notifications</string>
</resources>