<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:transitionName="@string/recipe_name"
        tools:context=".DetailActivity">

        <TextView
            android:id="@+id/recipeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="TextView"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/like_image"
            app:layout_constraintStart_toStartOf="@+id/closeIMage"
            app:layout_constraintTop_toBottomOf="@+id/closeIMage" />

        <ImageView
            android:id="@+id/closeIMage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="12dp"
            android:contentDescription="@string/close_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

        <ImageView
            android:id="@+id/like_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/like_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/closeIMage"
            app:srcCompat="@drawable/ic_baseline_favorite_border_24" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="205dp"
            android:layout_height="0dp"
            android:layout_marginEnd="-40dp"
            android:contentDescription="@string/recipe_image"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/recipePrepareTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView7"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/recipe_info"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/recipeName"
            app:layout_constraintTop_toBottomOf="@+id/recipeName" />

        <include
            android:id="@+id/recipeCookTime"
            layout="@layout/value_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <include
            android:id="@+id/recipePrepareTime"
            layout="@layout/value_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/recipeCookTime" />


        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/ingredients"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/recipePrepareTime"
            app:layout_constraintTop_toBottomOf="@+id/recipePrepareTime" />

        <TextView
            android:id="@+id/recipeINgredients"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/preparation"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/recipeINgredients"
            app:layout_constraintTop_toBottomOf="@+id/recipeINgredients" />

        <TextView
            android:id="@+id/instructionsDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="@+id/recipeINgredients"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/cookButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:text="@string/start_cooking"
            app:icon="@drawable/ic_baseline_access_time_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/editFab"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructionsDetail" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/editFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:backgroundTint="@color/editColor"
            android:text="@string/edit"
            app:icon="@drawable/ic_baseline_edit_24"
            app:layout_constraintBottom_toBottomOf="@+id/cookButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cookButton"
            app:layout_constraintTop_toTopOf="@+id/cookButton"
            app:srcCompat="@drawable/ic_baseline_close_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>